[package]
name = "llm_validator_0x0"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
rayon = "1.7"
serde_json = "1.0"
syn_crabs = "0.2.0"
log = "0.4.22"
env_logger = "0.11.5"
regex = "1.5"
diesel = { version = "2.0.0", features = ["postgres"] }
dotenv = "0.15"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.0", features = ["v4"] }
async-std = "1.10"
sqlx = { version = "0.5", features = ["runtime-tokio-native-tls", "postgres"] }
crossbeam-channel = "0.5"
rust-bert = "0.19.0"
tokenizers = "0.14.0"
psql = "0.0.0"


